finished required steps

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
         <div class="map-container"></div>
 
+        <a href="https://github.com/xluus9/lab7">Source Repository</a>
+
         <!-- hot link to jQuery 2.0.3 -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
         
@@ -22,7 +24,7 @@
                 'key' query string parameter with your own key
                 to get a key, go to https://code.google.com/apis/console
         -->
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAqnfFcZYL5k3Tav9kCUmZOSC-42yJupmc&amp;sensor=false"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAoS3Sl6NFqMAdoWCd54K54TUIkkF_sV44&amp;sensor=false"></script>
         
         <!-- our own JavaScript -->
         <script src="js/earthquakes.js"></script>
