--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     </head>
     <body>
         <h1>Earthquakes Recorded Over the Last 7 Days</h1>
+
+        <p class="filters">Minimum Magnitude:
+            <input type="number" class="min-magnitude" value="0" min="0" max="10" step="0.1">
+            <button class="refresh-button">Refresh</button>
+        </p>
+        
         <p class="message"></p>
 
         <div class="map-container"></div>
